--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitchphone - Novo produto exclusivo para assinantes Twitch Prime</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Twitch - PurplePhone - Novo produto exclusivo para assinantes Twitch Prime</title>
+    <script src="https://kit.fontawesome.com/ddaca44862.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/search.css">
 </head>
 <body>
-    <header>header
-        <div>
-            <span>MENINOOOO!</span>
+    <header>
+
+        <div class="menu">
+            <i class="fas fa-bars"></i>
         </div>
+
+        <div class="search">
+            <i class="fas fa-search"></i>
+        </div>
+
+       
+
     </header>
 
     
