--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitch - PurplePhone - Novo produto exclusivo para assinantes Twitch Prime</title>
     <script src="https://kit.fontawesome.com/ddaca44862.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/search.css">
+    <link rel="stylesheet" href="./css/description.css">
+    <link rel="stylesheet" href="./css/product.css">
+    <link rel="stylesheet" href="./css/social-media.css">
+    <link rel="stylesheet" href="./css/navegation.css">
 </head>
 <body>
     <header>
-
         <div class="menu">
             <i class="fas fa-bars"></i>
         </div>
@@ -19,13 +26,37 @@
         <div class="search">
             <i class="fas fa-search"></i>
         </div>
-
-       
-
     </header>
+    <main>
+        <div class="description">
+            <h1 class="description__title">
+                Razer Kraken BT
+            </h1>
+            <p class="description__text">
+                Be free to express your own style with the Razer Kraken BT. A wireless Bluetooth headset with headset lighting along with clear sounding 40mm drivers.
+            </p>
+        </div>
 
-    
-    <main>main</main>
+        <div class="products">
+            <span class="product__price">
+                US$159.99
+            </span>
+            <img src="./img/razer-kraken-bt.png" alt="" class="product__image">
+            <div class="product__navegation-container">
+                <a href="#" class="navegation">
+                    <i class="fas fa-angle-left"></i>
+                </a>
+                <a href="#" class="navegation">
+                    <i class="fas fa-angle-right"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="social-media">
+
+        </div>
+
+    </main>
 
 
     <footer>footer</footer>
