--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/product.css">
     <link rel="stylesheet" href="./css/social-media.css">
     <link rel="stylesheet" href="./css/navegation.css">
+    <link rel="stylesheet" href="./css/social-icon.css">
 </head>
 <body>
     <header>
@@ -52,9 +53,29 @@
             </div>
         </div>
 
-        <div class="social-media">
+        <ul class="social-media">
+            <li>
+                <a class="social-icon" href="">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a class="social-icon" href="">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a class="social-icon" href="">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a class="social-icon" href="">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </li>
 
-        </div>
+        </ul>
 
     </main>
 
