--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/social-media.css">
     <link rel="stylesheet" href="./css/navegation.css">
     <link rel="stylesheet" href="./css/social-icon.css">
+    <link rel="stylesheet" href="./css/info.css">
 </head>
 <body>
     <header>
@@ -80,6 +81,22 @@
     </main>
 
 
-    <footer>footer</footer>
+    <footer>
+        <div class="info">
+            <span class="info__number">- 01 -</span>
+            <span class="info__feature">FREQUENCY RESPONSE</span>
+            <span class="info__value">20Hz - 20kHz</span>
+        </div>
+        <div class="info">
+            <span class="info__number">- 02 -</span>
+            <span class="info__feature">IMPEDANCE</span>
+            <span class="info__value"> 32 Ω </span>
+        </div>
+        <div class="info">
+            <span class="info__number">- 03 -</span>
+            <span class="info__feature">SENSITIVITY</span>
+            <span class="info__value"> 96 dB/mW a 1 KHz </span>
+        </div>
+    </footer>
 </body>
 </html>
