--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Site para divulgar o novo HeadPhone Rayzer Purple">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitch - PurplePhone - Novo produto exclusivo para assinantes Twitch Prime</title>
     <script src="https://kit.fontawesome.com/ddaca44862.js" crossorigin="anonymous"></script>
@@ -45,10 +46,10 @@
             </span>
             <img src="./img/razer-kraken-bt.png" alt="" class="product__image">
             <div class="product__navegation-container">
-                <a href="#" class="navegation">
+                <a href="#" class="navegation" aria-label="imagem anterior">
                     <i class="fas fa-angle-left"></i>
                 </a>
-                <a href="#" class="navegation">
+                <a href="#" class="navegation" aria-label="proxima imagem">
                     <i class="fas fa-angle-right"></i>
                 </a>
             </div>
@@ -56,22 +57,22 @@
 
         <ul class="social-media">
             <li>
-                <a class="social-icon" href="">
+                <a class="social-icon" href="#" aria-label="Link para o Youtube">
                     <i class="fab fa-youtube"></i>
                 </a>
             </li>
             <li>
-                <a class="social-icon" href="">
+                <a class="social-icon" href="#" aria-label="Link para o Twitter">
                     <i class="fab fa-twitter"></i>
                 </a>
             </li>
             <li>
-                <a class="social-icon" href="">
+                <a class="social-icon" href="#" aria-label="Link para o Instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
             </li>
             <li>
-                <a class="social-icon" href="">
+                <a class="social-icon" href="#" aria-label="Link para o Facebook">
                     <i class="fab fa-facebook-f"></i>
                 </a>
             </li>
